# https://github.com/ADicksonLab/geomm
# https://github.com/iamishalkin/cyrtd

[tool.poetry]
name = "brilliantimagery"
version = "0.2.2"
description = "A python DNG editing package."
license = "GPL-3.0-only"
authors = ["Chad DeRosier <chad.derosier@gmail.com>"]
readme = "README.rst"
homepage = 'https://www.brilliantimagery.org'
repository = 'https://github.com/brilliantimagery/brilliantimagery'
build = 'build.py'
packages = [
    { include = "brilliantimagery"},
]
include=['tests/unit/dng/renderer_exporter.pyx', 'brilliantimagery.ppm._save.pyx']

[tool.poetry.dependencies]
python = "^3.8.0"
cython = "^0.29.15"
numpy = "^1.18.1"
opencv-contrib-python = "^4.1.2"
tqdm = "^4.41.1"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
Sphinx = "^2.3.1"
sphinx_rtd_theme = "^0.4.3"

#[tool.poetry.extras]
#docs = ["sphinx", "sphinx_rtd_theme"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
